fix: no color for the scrollbar and apply callback for the functions

--- a/src/components/DataTable/cells/TableCell.scss
+++ b/src/components/DataTable/cells/TableCell.scss
@@ -21,14 +21,6 @@ $cell-scrollbar: calc(var(--spacing-nano) + var(--spacing-pico));
             height: $cell-scrollbar;
         }
 
-        &::-webkit-scrollbar-thumb {
-            border-radius: var(--radius_small);
-            background-color: var(--color-gray_light);
-        }
-
-        &::-webkit-scrollbar-track {
-            background: transparent;
-        }
     }
 
     // Firefox-only layout fix to prevent native scrollbar from overlapping text.
